fix margins on mobile

--- a/style.css
+++ b/style.css
@@ -39,6 +39,16 @@ h5,
 h6 {
   overflow-wrap: break-word;
 }
+p,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  width: calc(100vw - 1rem);
+  margin-left: auto;
+  margin-right: auto;
+}
 #root,
 #__next {
   isolation: isolate;
@@ -89,7 +99,7 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0.5rem 0 0.25rem 0;
+  padding: 0.5rem 0.5rem 0.25rem 0.5rem;
   border-radius: 0 0 0.5rem 0.5rem;
 }
 
@@ -118,9 +128,9 @@ section {
 
 /* list styles */
 main ul {
-  width: 100vw;
+  width: calc(100vw - 1rem);
   max-width: 800px;
-  margin: 1rem 0;
+  margin: 1rem auto;
   padding: 0;
 }
 
@@ -234,12 +244,13 @@ aside {
 /* iframe styles */
 .stream-wrapper {
   background-color: #000;
-  overflow: hidden;
   max-width: 760px;
   margin: 1rem auto;
-  padding-top: 56.25%;
-  position: relative;
   border-radius: 0 0 0.25rem 0.25rem;
+
+  position: relative;
+  padding-top: 56.25%;
+  overflow: hidden;
 }
 
 .stream-wrapper iframe {
